--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -32,4 +32,5 @@ repos:
         entry: bash -c 'asdf plugin test svn . "svn --version" || echo "Skipping full test - make sure to run this before pushing"'
         language: system
         pass_filenames: false
+        always_run: true
         stages: [manual]
